--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,21 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8000",
+  "secure": false,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "firebase": "^8.1.1",
+    "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "socket.io-client": "^3.0.3",
+    "socketio": "^1.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
