--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     },
     "homepage": "https://github.com/kzambrow/CS554-FinalProject#readme",
     "dependencies": {
-        "concurrently":"^5.3.0"
+        "concurrently": "^5.3.0",
+        "express": "^4.17.1",
+        "socket.io": "^3.0.3"
     }
 }
