--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.7",
     "mongoose-seed": "^0.6.0",
+    "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
     "socket.io": "^3.0.3"
   },
