--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "all": "0.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "easyimage": "^3.1.1",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
     "mongodb": "^3.6.3",
