--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,15 @@
     "cors": "^2.8.5",
     "easyimage": "^3.1.1",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "handlebars": "^4.7.6",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.7",
     "mongoose-seed": "^0.6.0",
     "multer": "^1.4.2",
     "node-schedule": "^1.3.2",
-    "socket.io": "^3.0.3"
+    "socket.io": "^3.0.3",
+    "util": "^0.10.4"
   },
   "mdSeed": {
     "seedersFolder": "./seeders"
