--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-beforeunload": "^2.4.0",
+    "react-bootstrap": "^1.4.0",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
